MVR-288 Fixed wrapping of Tags on addRecipe page.

--- a/src/components/recipe/tagslist/TagsList.module.css
+++ b/src/components/recipe/tagslist/TagsList.module.css
@@ -2,4 +2,5 @@
     display: flex;
     justify-content: center;
     margin-top: 5px;
+    flex-wrap:wrap;
 }
